<?xml version="1.0"?>
<package format="2">
  <name>mpl_external_planner</name>
  <version>0.0.0</version>
  <description>The mpl_external_planner package</description>

  <maintainer email="sikang@seas.upenn.edu">sikang</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>catkin_simple</build_depend>
  <depend>pcl_ros</depend>
  <depend>eigen_conversions</depend>
  <depend>motion_primitive_library</depend>
  <depend>decomp_util</depend>

</package>
